@@ -1,6 +1,7 @@
 /*
  * MCreator (https://mcreator.net/)
- * Copyright (C) 2020 Pylo and contributors
+ * Copyright (C) 2012-2020, Pylo
+ * Copyright (C) 2020-2023, Pylo, opensource contributors
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -28,10 +29,8 @@ import net.mcreator.element.parts.gui.Image;
 import net.mcreator.element.parts.gui.Label;
 import net.mcreator.element.parts.gui.TextField;
 import net.mcreator.element.parts.gui.*;
-import net.mcreator.element.parts.procedure.LogicProcedure;
-import net.mcreator.element.parts.procedure.NumberProcedure;
 import net.mcreator.element.parts.procedure.Procedure;
-import net.mcreator.element.parts.procedure.StringProcedure;
+import net.mcreator.element.parts.procedure.*;
 import net.mcreator.element.types.Dimension;
 import net.mcreator.element.types.Enchantment;
 import net.mcreator.element.types.Fluid;
@@ -43,17 +42,17 @@ import net.mcreator.minecraft.DataListEntry;
 import net.mcreator.minecraft.DataListLoader;
 import net.mcreator.minecraft.ElementUtil;
 import net.mcreator.minecraft.MCItem;
-import net.mcreator.ui.blockly.BlocklyEditorType;
 import net.mcreator.ui.dialogs.wysiwyg.AbstractWYSIWYGDialog;
+import net.mcreator.ui.minecraft.states.PropertyData;
+import net.mcreator.ui.minecraft.states.PropertyDataWithValue;
+import net.mcreator.ui.minecraft.states.StateMap;
+import net.mcreator.ui.modgui.ItemGUI;
 import net.mcreator.ui.modgui.LivingEntityGUI;
 import net.mcreator.ui.workspace.resources.TextureType;
 import net.mcreator.util.StringUtils;
 import net.mcreator.util.image.EmptyIcon;
 import net.mcreator.workspace.Workspace;
-import net.mcreator.workspace.elements.ModElement;
-import net.mcreator.workspace.elements.VariableElement;
-import net.mcreator.workspace.elements.VariableType;
-import net.mcreator.workspace.elements.VariableTypeLoader;
+import net.mcreator.workspace.elements.*;
 
 import java.awt.*;
 import java.awt.image.RenderedImage;
@@ -95,12 +94,17 @@ public class TestWorkspaceDataProvider {
 			generatableElements.add(getToolExample(me(workspace, type, "10"), "MultiTool", random, true, false));
 			generatableElements.add(getToolExample(me(workspace, type, "11"), "Shears", random, true, false));
 			generatableElements.add(getToolExample(me(workspace, type, "12"), "Fishing rod", random, true, false));
+			generatableElements.add(getToolExample(me(workspace, type, "13"), "Shield", random, true, false));
 		} else if (type == ModElementType.TAB) {
 			generatableElements.add(getExampleFor(me(workspace, type, "1"), uiTest, random, true, true, 0));
 			generatableElements.add(getExampleFor(me(workspace, type, "2"), uiTest, random, true, false, 1));
-		} else if (type == ModElementType.COMMAND || type == ModElementType.FUNCTION || type == ModElementType.PAINTING
-				|| type == ModElementType.KEYBIND || type == ModElementType.PROCEDURE || type == ModElementType.FEATURE
-				|| type == ModElementType.CODE) {
+		} else if (type == ModElementType.COMMAND) {
+			generatableElements.add(getCommandExample(me(workspace, type, "1"), "STANDARD", random));
+			generatableElements.add(getCommandExample(me(workspace, type, "2"), "SINGLEPLAYER_ONLY", random));
+			generatableElements.add(getCommandExample(me(workspace, type, "3"), "MULTIPLAYER_ONLY", random));
+			generatableElements.add(getCommandExample(me(workspace, type, "4"), "CLIENTSIDE", random));
+		} else if (type == ModElementType.FUNCTION || type == ModElementType.PAINTING || type == ModElementType.KEYBIND
+				|| type == ModElementType.PROCEDURE || type == ModElementType.FEATURE || type == ModElementType.CODE) {
 			generatableElements.add(
 					getExampleFor(new ModElement(workspace, "Example" + type.getRegistryName(), type), uiTest, random,
 							true, true, 0));
@@ -120,10 +124,16 @@ public class TestWorkspaceDataProvider {
 	}
 
 	public static void fillWorkspaceWithTestData(Workspace workspace) {
+		if (workspace.getGeneratorStats().getBaseCoverageInfo().get("sounds") == GeneratorStats.CoverageStatus.FULL) {
+			for (int i = 1; i <= 3; i++) {
+				SoundElement sound = new SoundElement("test" + i, List.of(), "neutral", null);
+				workspace.addSoundElement(sound);
+			}
+		}
+
 		if (workspace.getGeneratorStats().getBaseCoverageInfo().get("variables")
 				== GeneratorStats.CoverageStatus.FULL) {
-			VariableElement sampleVariable1 = new VariableElement();
-			sampleVariable1.setName("test");
+			VariableElement sampleVariable1 = new VariableElement("test");
 			sampleVariable1.setValue("true");
 			sampleVariable1.setType(VariableTypeLoader.BuiltInTypes.LOGIC);
 			sampleVariable1.setScope(VariableType.Scope.GLOBAL_WORLD);
@@ -132,8 +142,7 @@ public class TestWorkspaceDataProvider {
 			int idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("logic" + (idx++));
+					VariableElement variable = new VariableElement("logic" + (idx++));
 					variable.setValue("true");
 					variable.setType(VariableTypeLoader.BuiltInTypes.LOGIC);
 					variable.setScope(scope);
@@ -144,8 +153,7 @@ public class TestWorkspaceDataProvider {
 			idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("number" + (idx++));
+					VariableElement variable = new VariableElement("number" + (idx++));
 					variable.setValue("12");
 					variable.setType(VariableTypeLoader.BuiltInTypes.NUMBER);
 					variable.setScope(scope);
@@ -156,8 +164,7 @@ public class TestWorkspaceDataProvider {
 			idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("string" + (idx++));
+					VariableElement variable = new VariableElement("string" + (idx++));
 					variable.setValue("test");
 					variable.setType(VariableTypeLoader.BuiltInTypes.STRING);
 					variable.setScope(scope);
@@ -168,8 +175,7 @@ public class TestWorkspaceDataProvider {
 			idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("itemstack" + (idx++));
+					VariableElement variable = new VariableElement("itemstack" + (idx++));
 					variable.setValue("ItemStack.EMPTY");
 					variable.setType(VariableTypeLoader.BuiltInTypes.ITEMSTACK);
 					variable.setScope(scope);
@@ -180,8 +186,7 @@ public class TestWorkspaceDataProvider {
 			idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("direction" + (idx++));
+					VariableElement variable = new VariableElement("direction" + (idx++));
 					variable.setValue("UP");
 					variable.setType(VariableTypeLoader.BuiltInTypes.DIRECTION);
 					variable.setScope(scope);
@@ -192,8 +197,7 @@ public class TestWorkspaceDataProvider {
 			idx = 0;
 			for (VariableType.Scope scope : VariableType.Scope.values()) {
 				if (scope != VariableType.Scope.LOCAL) {
-					VariableElement variable = new VariableElement();
-					variable.setName("blockstate" + (idx++));
+					VariableElement variable = new VariableElement("blockstate" + (idx++));
 					variable.setValue("Blocks.AIR");
 					variable.setType(VariableTypeLoader.BuiltInTypes.BLOCKSTATE);
 					variable.setScope(scope);
@@ -241,16 +245,20 @@ public class TestWorkspaceDataProvider {
 		if (workspace.getFolderManager().getTexturesFolder(TextureType.ENTITY) != null) {
 			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(),
 					workspace.getFolderManager().getTextureFile("test", TextureType.ENTITY));
+			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(),
+					workspace.getFolderManager().getTextureFile("entityTx1", TextureType.ENTITY));
+			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(),
+					workspace.getFolderManager().getTextureFile("entityTx2", TextureType.ENTITY));
 		}
 
 		if (workspace.getFolderManager().getTexturesFolder(TextureType.EFFECT) != null) {
 			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(),
-					workspace.getFolderManager().getTextureFile("test", TextureType.EFFECT));
+					workspace.getFolderManager().getTextureFile("effect1", TextureType.EFFECT));
 		}
 
 		if (workspace.getFolderManager().getTexturesFolder(TextureType.PARTICLE) != null) {
 			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(),
-					workspace.getFolderManager().getTextureFile("test", TextureType.PARTICLE));
+					workspace.getFolderManager().getTextureFile("particle1", TextureType.PARTICLE));
 		}
 
 		if (workspace.getFolderManager().getTexturesFolder(TextureType.SCREEN) != null) {
@@ -263,7 +271,7 @@ public class TestWorkspaceDataProvider {
 		}
 
 		if (workspace.getFolderManager().getTexturesFolder(TextureType.ARMOR) != null) {
-			File[] armorPars = workspace.getFolderManager().getArmorTextureFilesForName("test");
+			File[] armorPars = workspace.getFolderManager().getArmorTextureFilesForName("armorTexture");
 			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(), armorPars[0]);
 			FileIO.writeImageToPNGFile((RenderedImage) imageIcon.getImage(), armorPars[1]);
 		}
@@ -283,7 +291,9 @@ public class TestWorkspaceDataProvider {
 	private static GeneratableElement getExampleFor(ModElement modElement, boolean uiTest, Random random, boolean _true,
 			boolean emptyLists, int valueIndex) {
 		List<MCItem> blocksAndItems = ElementUtil.loadBlocksAndItems(modElement.getWorkspace());
+		List<MCItem> blocksAndItemsAndTags = ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace());
 		List<MCItem> blocks = ElementUtil.loadBlocks(modElement.getWorkspace());
+		List<MCItem> blocksAndTags = ElementUtil.loadBlocksAndTags(modElement.getWorkspace());
 		List<DataListEntry> biomes = ElementUtil.loadAllBiomes(modElement.getWorkspace());
 
 		if (ModElementType.ADVANCEMENT.equals(modElement.getType())) {
@@ -470,13 +480,8 @@ public class TestWorkspaceDataProvider {
 					new Sound(modElement.getWorkspace(),
 							getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
 			fluid.rarity = getRandomString(random, Arrays.asList("COMMON", "UNCOMMON", "RARE", "EPIC"));
-			fluid.specialInfo = new ArrayList<>();
-			if (!emptyLists) {
-				fluid.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				fluid.specialInfo = new ArrayList<>();
-			}
+			fluid.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			fluid.resistance = 52.2;
 			fluid.emissiveRendering = _true;
 			fluid.luminance = 6;
@@ -500,7 +505,7 @@ public class TestWorkspaceDataProvider {
 			keyBinding.triggerKey = getRandomString(random,
 					DataListLoader.loadDataList("keybuttons").stream().map(DataListEntry::getName).toList());
 			keyBinding.keyBindingName = modElement.getName();
-			keyBinding.keyBindingCategoryKey = "key.categories.misc";
+			keyBinding.keyBindingCategoryKey = "test_category";
 			if (!emptyLists)
 				keyBinding.onKeyPressed = new Procedure("procedure3");
 			if (_true)
@@ -518,17 +523,20 @@ public class TestWorkspaceDataProvider {
 			ArrayList<GUIComponent> components = new ArrayList<>();
 
 			components.add(new Label("text", 100, 150, new StringProcedure(_true ? "string1" : null, "fixed value 1"),
-					Color.red, new Procedure("condition1")));
+					Color.red, new Procedure("condition1"), getRandomItem(random, GUIComponent.AnchorPoint.values())));
 			components.add(new Label("text2", 100, 150, new StringProcedure(!_true ? "string2" : null, "fixed value 2"),
-					Color.white, new Procedure("condition4")));
+					Color.white, new Procedure("condition4"),
+					getRandomItem(random, GUIComponent.AnchorPoint.values())));
 
-			components.add(new Image(20, 30, "pricture1", true, new Procedure("condition1")));
-			components.add(new Image(22, 31, "pricture2", false, new Procedure("condition2")));
-			components.add(
-					new EntityModel(60, 20, new Procedure("entity1"), new Procedure("condition3"), 30, 0, false));
+			components.add(new Image(20, 30, "picture1", true, new Procedure("condition1"),
+					getRandomItem(random, GUIComponent.AnchorPoint.values())));
+			components.add(new Image(22, 31, "picture2", false, new Procedure("condition2"),
+					getRandomItem(random, GUIComponent.AnchorPoint.values())));
+			components.add(new EntityModel(60, 20, new Procedure("entity1"), new Procedure("condition3"), 30, 0, false,
+					getRandomItem(random, GUIComponent.AnchorPoint.values())));
 			components.add(
 					new EntityModel(60, 20, new Procedure("entity1"), new Procedure(!_true ? "condition4" : null), 30,
-							90, false));
+							90, false, getRandomItem(random, GUIComponent.AnchorPoint.values())));
 			overlay.displayCondition = new Procedure("condition1");
 			overlay.components = components;
 			overlay.baseTexture = emptyLists ? "" : "test.png";
@@ -565,11 +573,12 @@ public class TestWorkspaceDataProvider {
 				components.add(new Image(20, 30, "picture1", true, new Procedure("condition1")));
 				components.add(new Image(22, 31, "picture2", false, new Procedure("condition2")));
 				components.add(new Button(AbstractWYSIWYGDialog.textToMachineName(components, null, "button"), 10, 10,
-						"button1", 100, 200, new Procedure("procedure10"), null));
-				components.add(new Button("button2", 10, 10, "button2", 100, 200, null, null));
-				components.add(new Button("button3", 10, 10, "button3", 100, 200, null, new Procedure("condition3")));
+						"button1", 100, 200, _true, new Procedure("procedure10"), null));
+				components.add(new Button("button2", 10, 10, "button2", 100, 200, !_true, null, null));
+				components.add(
+						new Button("button3", 10, 10, "button3", 100, 200, _true, null, new Procedure("condition3")));
 				components.add(new Button(AbstractWYSIWYGDialog.textToMachineName(components, null, "button"), 10, 10,
-						"button4", 100, 200, new Procedure("procedure2"), new Procedure("condition4")));
+						"button4", 100, 200, !_true, new Procedure("procedure2"), new Procedure("condition4")));
 				components.add(
 						new ImageButton("imagebutton1", 0, 48, "picture1", "picture2", new Procedure("procedure10"),
 								null));
@@ -608,160 +617,13 @@ public class TestWorkspaceDataProvider {
 								30, 270, !_true));
 				components.add(new Tooltip(AbstractWYSIWYGDialog.textToMachineName(components, null,
 						"This is --...p a test string ŽĐĆ @ /test//\" tes___"), 20, 40, 70, 10,
-							new StringProcedure(_true ? "string1" : null, "fixed value 1"), new Procedure("condition4")));
+						new StringProcedure(_true ? "string1" : null, "fixed value 1"), new Procedure("condition4")));
 			}
 			gui.components = components;
 			return gui;
 		} else if (ModElementType.LIVINGENTITY.equals(modElement.getType())) {
-			LivingEntity livingEntity = new LivingEntity(modElement);
-			livingEntity.mobName = modElement.getName();
-			livingEntity.mobLabel = "mod label " + StringUtils.machineToReadableName(modElement.getName());
-			livingEntity.mobModelTexture = "test.png";
-			livingEntity.mobModelGlowTexture = emptyLists ? "" : "test.png";
-			livingEntity.transparentModelCondition = new Procedure("condition1");
-			livingEntity.isShakingCondition = new Procedure("condition2");
-			livingEntity.solidBoundingBox = new LogicProcedure(_true ? "condition3" : null, _true);
-			livingEntity.mobModelName = getRandomItem(random, LivingEntityGUI.builtinmobmodels).getReadableName();
-			livingEntity.spawnEggBaseColor = Color.red;
-			livingEntity.spawnEggDotColor = Color.green;
-			livingEntity.isBoss = _true;
-			livingEntity.creativeTab = new TabEntry(modElement.getWorkspace(),
-					getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
-			livingEntity.bossBarColor = getRandomItem(random,
-					new String[] { "PINK", "BLUE", "RED", "GREEN", "YELLOW", "PURPLE", "WHITE" });
-			livingEntity.bossBarType = getRandomItem(random,
-					new String[] { "PROGRESS", "NOTCHED_6", "NOTCHED_10", "NOTCHED_12", "NOTCHED_20" });
-			livingEntity.equipmentMainHand = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.equipmentOffHand = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.equipmentHelmet = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.equipmentBody = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.equipmentLeggings = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.equipmentBoots = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.mobBehaviourType = _true ? "Creature" : "Mob";
-			livingEntity.mobCreatureType = getRandomItem(random,
-					new String[] { "UNDEFINED", "UNDEAD", "ARTHROPOD", "ILLAGER", "WATER" });
-			livingEntity.attackStrength = 4;
-			livingEntity.attackKnockback = 1.5;
-			livingEntity.knockbackResistance = 0.5;
-			livingEntity.movementSpeed = 0.76;
-			livingEntity.stepHeight = 2.24;
-			livingEntity.armorBaseValue = 0.123;
-			livingEntity.health = 42;
-			livingEntity.trackingRange = 27;
-			livingEntity.followRange = 11;
-			livingEntity.waterMob = !_true;
-			livingEntity.flyingMob = !_true;
-			livingEntity.inventorySize = 10;
-			livingEntity.inventoryStackSize = 42;
-			livingEntity.disableCollisions = !_true;
-			livingEntity.immuneToFire = _true;
-			livingEntity.immuneToArrows = !_true;
-			livingEntity.immuneToFallDamage = !_true;
-			livingEntity.immuneToCactus = !_true;
-			livingEntity.immuneToDrowning = !_true;
-			livingEntity.immuneToLightning = !_true;
-			livingEntity.immuneToPotions = !_true;
-			livingEntity.immuneToPlayer = !_true;
-			livingEntity.immuneToExplosion = !_true;
-			livingEntity.immuneToTrident = !_true;
-			livingEntity.immuneToAnvil = !_true;
-			livingEntity.immuneToDragonBreath = !_true;
-			livingEntity.immuneToWither = !_true;
-			livingEntity.hasSpawnEgg = !_true;
-			livingEntity.xpAmount = 8;
-			livingEntity.ridable = _true;
-			livingEntity.canControlStrafe = !_true;
-			livingEntity.canControlForward = _true;
-			livingEntity.guiBoundTo = "<NONE>";
-			livingEntity.mobDrop = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.livingSound = new Sound(modElement.getWorkspace(),
-					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			livingEntity.hurtSound = new Sound(modElement.getWorkspace(),
-					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			livingEntity.deathSound = new Sound(modElement.getWorkspace(),
-					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			livingEntity.stepSound = new Sound(modElement.getWorkspace(),
-					emptyLists ? "" : getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			livingEntity.rangedItemType = "Default item";
-			if (!emptyLists) {
-				livingEntity.spawningCondition = new Procedure("condition3");
-				livingEntity.onStruckByLightning = new Procedure("procedure1");
-				livingEntity.whenMobFalls = new Procedure("procedure2");
-				livingEntity.whenMobDies = new Procedure("procedure3");
-				livingEntity.whenMobIsHurt = new Procedure("procedure4");
-				livingEntity.onRightClickedOn = _true ?
-						new Procedure("actionresulttype1") :
-						new Procedure("procedure5");
-				livingEntity.whenThisMobKillsAnother = new Procedure("procedure6");
-				livingEntity.onMobTickUpdate = new Procedure("procedure7");
-				livingEntity.onPlayerCollidesWith = new Procedure("procedure8");
-				livingEntity.onInitialSpawn = new Procedure("procedure9");
-			}
-			livingEntity.hasAI = _true;
-			livingEntity.aiBase = "(none)";
-			if (!emptyLists) {
-				Set<String> aiTasks = modElement.getGeneratorStats().getBlocklyBlocks(BlocklyEditorType.AI_TASK);
-				if (aiTasks.contains("wander") && aiTasks.contains("look_around") && aiTasks.contains(
-						"panic_when_attacked") && aiTasks.contains("attack_action") && aiTasks.contains(
-						"swim_in_water")) {
-					livingEntity.aixml =
-							"<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"aitasks_container\" deletable=\"false\" x=\"40\" y=\"40\">"
-									+ "<next><block type=\"wander\"><field name=\"speed\">1</field><field name=\"condition\">null,null</field>"
-									+ "<next><block type=\"look_around\"><field name=\"condition\">null,null</field>"
-									+ "<next><block type=\"swim_in_water\"><field name=\"condition\">null,null</field>"
-									+ "<next><block type=\"panic_when_attacked\"><field name=\"speed\">1.2</field><field name=\"condition\">null,null</field>"
-									+ "<next><block type=\"attack_action\"><field name=\"callhelp\">TRUE</field><field name=\"condition\">null,null</field>"
-									+ "</block></next></block></next></block></next></block></next></block></next></block></xml>";
-				}
-			}
-			if (livingEntity.aixml == null) // fallback
-				livingEntity.aixml = "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"aitasks_container\" deletable=\"false\" x=\"40\" y=\"40\"></block></xml>";
-			livingEntity.breedable = _true;
-			livingEntity.tameable = _true;
-			livingEntity.breedTriggerItems = new ArrayList<>();
-			if (!emptyLists) {
-				livingEntity.breedTriggerItems.add(
-						new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random, blocksAndItems).getName()));
-				livingEntity.breedTriggerItems.add(
-						new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random, blocksAndItems).getName()));
-				livingEntity.breedTriggerItems.add(
-						new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random, blocksAndItems).getName()));
-				livingEntity.breedTriggerItems.add(
-						new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random, blocksAndItems).getName()));
-				livingEntity.breedTriggerItems.add(
-						new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random, blocksAndItems).getName()));
-			}
-			livingEntity.ranged = _true;
-			livingEntity.rangedAttackItem = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			livingEntity.rangedAttackInterval = 15;
-			livingEntity.rangedAttackRadius = 8;
-			livingEntity.spawnThisMob = !_true;
-			livingEntity.doesDespawnWhenIdle = _true;
-			livingEntity.spawningProbability = 23;
-			livingEntity.mobSpawningType = getRandomItem(random, ElementUtil.getDataListAsStringArray("mobspawntypes"));
-			livingEntity.minNumberOfMobsPerGroup = 4;
-			livingEntity.maxNumberOfMobsPerGroup = 40;
-			livingEntity.restrictionBiomes = new ArrayList<>();
-			if (!emptyLists) {
-				livingEntity.restrictionBiomes.addAll(
-						biomes.stream().skip(_true ? 0 : ((long) (biomes.size() / 4) * valueIndex))
-								.limit(biomes.size() / 4)
-								.map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
-			}
-			livingEntity.spawnInDungeons = _true;
-			livingEntity.modelWidth = 0.4;
-			livingEntity.modelHeight = 1.3;
-			livingEntity.mountedYOffset = -3.1;
-			livingEntity.modelShadowSize = 1.8;
-			return livingEntity;
+			return getLivingEntity(modElement, random, _true, emptyLists, blocksAndItems, blocksAndItemsAndTags,
+					biomes);
 		} else if (ModElementType.DIMENSION.equals(modElement.getType())) {
 			Dimension dimension = new Dimension(modElement);
 			dimension.texture = "test";
@@ -795,6 +657,8 @@ public class TestWorkspaceDataProvider {
 			dimension.portalFrame = new MItemBlock(modElement.getWorkspace(),
 					getRandomMCItem(random, blocks).getName());
 			dimension.igniterName = modElement.getName();
+			dimension.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			dimension.worldGenType = new String[] { "Nether like gen", "Normal world gen", "End like gen",
 					"Normal world gen" }[valueIndex];
 			dimension.mainFillerBlock = new MItemBlock(modElement.getWorkspace(),
@@ -812,29 +676,30 @@ public class TestWorkspaceDataProvider {
 		} else if (ModElementType.STRUCTURE.equals(modElement.getType())) {
 			Structure structure = new Structure(modElement);
 			structure.structure = "test";
-			structure.spawnProbability = 310000;
-			structure.minCountPerChunk = 1;
-			structure.maxCountPerChunk = 3;
-			structure.spawnHeightOffset = new int[] { 0, -3, 10, -10 }[valueIndex];
-			structure.spawnXOffset = new int[] { 0, -3, 10, -10 }[valueIndex];
-			structure.spawnZOffset = new int[] { 0, -3, 10, -10 }[valueIndex];
-			structure.spawnWorldTypes = new ArrayList<>(Arrays.asList("Nether", "Surface", "End"));
-			structure.spawnLocation = getRandomString(random, Arrays.asList("Ground", "Air", "Underground"));
 			structure.surfaceDetectionType = getRandomString(random,
-					Arrays.asList("First motion blocking block", "First block"));
-			structure.ignoreBlocks = getRandomString(random,
-					Arrays.asList("STRUCTURE_BLOCK", "AIR_AND_STRUCTURE_BLOCK", "AIR"));
-			structure.restrictionBlocks = new ArrayList<>();
-			structure.restrictionBiomes = new ArrayList<>();
+					Arrays.asList("WORLD_SURFACE_WG", "WORLD_SURFACE", "OCEAN_FLOOR_WG", "OCEAN_FLOOR",
+							"MOTION_BLOCKING", "MOTION_BLOCKING_NO_LEAVES"));
+			structure.ignoredBlocks = new ArrayList<>();
 			if (!emptyLists) {
-				structure.restrictionBlocks.addAll(
-						blocks.stream().skip(_true ? 0 : ((blocks.size() / 4) * valueIndex)).limit(blocks.size() / 4)
+				structure.ignoredBlocks.addAll(
+						blocks.stream().skip(_true ? 0 : ((long) (blocks.size() / 4) * valueIndex))
+								.limit(blocks.size() / 4)
 								.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
 			}
+			structure.terrainAdaptation = getRandomString(random,
+					Arrays.asList("none", "beard_thin", "beard_box", "bury"));
+			structure.projection = getRandomString(random, Arrays.asList("rigid", "terrain_matching"));
+			structure.restrictionBiomes = new ArrayList<>();
+			structure.spacing = 14;
+			structure.separation = 6;
 			if (_true) {
-				structure.generateCondition = new Procedure("condition1");
-				structure.onStructureGenerated = new Procedure("procedure3");
+				structure.restrictionBiomes.addAll(
+						biomes.stream().map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+			} else {
+				structure.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
 			}
+			structure.generationStep = TestWorkspaceDataProvider.getRandomItem(random,
+					ElementUtil.getDataListAsStringArray("generationsteps"));
 			return structure;
 		} else if (ModElementType.ARMOR.equals(modElement.getType())) {
 			Armor armor = new Armor(modElement);
@@ -858,25 +723,22 @@ public class TestWorkspaceDataProvider {
 			armor.leggingsItemCustomModelName = "Normal";
 			armor.bootsItemRenderType = 0;
 			armor.bootsItemCustomModelName = "Normal";
-			if (!emptyLists) {
-				armor.helmetSpecialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-				armor.bodySpecialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-				armor.leggingsSpecialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-				armor.bootsSpecialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				armor.helmetSpecialInfo = new ArrayList<>();
-				armor.bodySpecialInfo = new ArrayList<>();
-				armor.leggingsSpecialInfo = new ArrayList<>();
-				armor.bootsSpecialInfo = new ArrayList<>();
-			}
+			armor.helmetSpecialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
+			armor.bodySpecialInformation = new StringListProcedure(emptyLists ? null : "string2",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
+			armor.leggingsSpecialInformation = new StringListProcedure(emptyLists ? null : "string3",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
+			armor.bootsSpecialInformation = new StringListProcedure(emptyLists ? null : "string4",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			armor.helmetImmuneToFire = _true;
 			armor.bodyImmuneToFire = !_true;
 			armor.leggingsImmuneToFire = _true;
 			armor.bootsImmuneToFire = !_true;
+			armor.helmetPiglinNeutral = new LogicProcedure(_true ? "condition1" : null, _true);
+			armor.bodyPiglinNeutral = new LogicProcedure(_true ? "condition2" : null, _true);
+			armor.leggingsPiglinNeutral = new LogicProcedure(_true ? "condition3" : null, _true);
+			armor.bootsPiglinNeutral = new LogicProcedure(_true ? "condition4" : null, _true);
 			armor.equipSound = new Sound(modElement.getWorkspace(),
 					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
 			armor.onHelmetTick = new Procedure("procedure1");
@@ -889,7 +751,7 @@ public class TestWorkspaceDataProvider {
 			armor.leggingsName = modElement.getName() + " appendix4";
 			armor.creativeTab = new TabEntry(modElement.getWorkspace(),
 					getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
-			armor.armorTextureFile = "test";
+			armor.armorTextureFile = "armorTexture";
 			armor.maxDamage = 12;
 			armor.damageValueHelmet = 3;
 			armor.damageValueBody = 4;
@@ -900,26 +762,24 @@ public class TestWorkspaceDataProvider {
 			armor.knockbackResistance = 3.148;
 			armor.repairItems = new ArrayList<>();
 			if (!emptyLists) {
-				armor.repairItems.addAll(
-						blocksAndItems.stream().skip(_true ? 0 : ((long) (blocksAndItems.size() / 4) * valueIndex))
-								.limit(blocksAndItems.size() / 4)
-								.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+				armor.repairItems = new ArrayList<>(blocksAndItemsAndTags.stream()
+						.skip(_true ? 0 : ((long) (blocksAndItemsAndTags.size() / 4) * valueIndex))
+						.limit(blocksAndItemsAndTags.size() / 4)
+						.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+				armor.repairItems.add(new MItemBlock(modElement.getWorkspace(), "TAG:flowers"));
 			}
 			return armor;
 		} else if (ModElementType.PLANT.equals(modElement.getType())) {
 			Plant plant = new Plant(modElement);
 			plant.name = modElement.getName();
-			plant.spawnWorldTypes = new ArrayList<>(Arrays.asList("Nether", "Surface", "End"));
+			plant.plantType = new String[] { "normal", "growapable", "double", "normal" }[valueIndex];
 			plant.creativeTab = new TabEntry(modElement.getWorkspace(),
 					getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
 			plant.texture = "test";
 			plant.textureBottom = "test2";
 			plant.itemTexture = emptyLists ? "" : "itest";
 			plant.particleTexture = emptyLists ? "" : "test3";
-			plant.plantType = new String[] { "normal", "growapable", "double", "normal" }[valueIndex];
 			plant.growapableSpawnType = getRandomItem(random, ElementUtil.getDataListAsStringArray("planttypes"));
-			plant.staticPlantGenerationType = getRandomItem(random, new String[] { "Grass", "Flower" });
-			plant.doublePlantGenerationType = getRandomItem(random, new String[] { "Grass", "Flower" });
 			plant.suspiciousStewEffect = getRandomString(random,
 					ElementUtil.loadAllPotionEffects(modElement.getWorkspace()).stream().map(DataListEntry::getName)
 							.toList());
@@ -945,19 +805,14 @@ public class TestWorkspaceDataProvider {
 			}
 			plant.hardness = 0.03;
 			plant.emissiveRendering = !_true;
-			plant.resistance = 3;
-			plant.luminance = 3;
+			plant.resistance = 3.45;
+			plant.luminance = 7;
 			plant.isReplaceable = !_true;
 			plant.forceTicking = !_true;
 			plant.hasTileEntity = !_true;
 			plant.isSolid = _true;
-			plant.specialInfo = new ArrayList<>();
-			if (!emptyLists) {
-				plant.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				plant.specialInfo = new ArrayList<>();
-			}
+			plant.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			plant.creativePickItem = new MItemBlock(modElement.getWorkspace(),
 					getRandomMCItem(random, blocks).getName());
 			plant.colorOnMap = getRandomItem(random, ElementUtil.getDataListAsStringArray("mapcolors"));
@@ -984,6 +839,7 @@ public class TestWorkspaceDataProvider {
 			plant.frequencyOnChunks = 13;
 			plant.patchSize = 46;
 			plant.generateAtAnyHeight = _true;
+			plant.generationType = getRandomItem(random, new String[] { "Grass", "Flower" });
 			plant.flammability = 5;
 			plant.fireSpreadSpeed = 12;
 			plant.speedFactor = 34.632;
@@ -996,9 +852,12 @@ public class TestWorkspaceDataProvider {
 			}
 			plant.restrictionBiomes = new ArrayList<>();
 			if (!emptyLists) {
-				plant.restrictionBiomes.addAll(
-						biomes.stream().skip(_true ? 0 : ((biomes.size() / 4) * valueIndex)).limit(biomes.size() / 4)
-								.map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				if (_true) {
+					plant.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
+				} else {
+					plant.restrictionBiomes.addAll(
+							biomes.stream().map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				}
 			}
 			plant.onNeighbourBlockChanges = new Procedure("procedure7");
 			plant.onTickUpdate = new Procedure("procedure2");
@@ -1013,14 +872,19 @@ public class TestWorkspaceDataProvider {
 			plant.onEntityWalksOn = new Procedure("procedure11");
 			plant.onHitByProjectile = new Procedure("procedure12");
 			plant.placingCondition = _true ? null : new Procedure("condition2");
-			plant.generateCondition = emptyLists ? null : new Procedure("condition1");
 			plant.tintType = getRandomString(random,
 					Arrays.asList("No tint", "Grass", "Foliage", "Birch foliage", "Spruce foliage", "Default foliage",
 							"Water", "Sky", "Fog", "Water fog"));
-			plant.renderType = new int[] { 13, !"No tint".equals(plant.tintType) ? 120 : 12, 13,
-					!"No tint".equals(plant.tintType) ? 120 : 12 }[valueIndex];
-			plant.customModelName = new String[] { "Crop model", "Cross model", "Crop model",
-					"Cross model" }[valueIndex];
+
+			if ("double".equals(plant.plantType)) {
+				plant.renderType = !"No tint".equals(plant.tintType) ? 120 : 12;
+				plant.customModelName = "Cross model";
+			} else {
+				plant.renderType = new int[] { 13, !"No tint".equals(plant.tintType) ? 120 : 12, 13,
+						!"No tint".equals(plant.tintType) ? 120 : 12 }[valueIndex];
+				plant.customModelName = new String[] { "Crop model", "Cross model", "Crop model",
+						"Cross model" }[valueIndex];
+			}
 			plant.isItemTinted = _true;
 			if (!emptyLists) {
 				plant.isBonemealable = true;
@@ -1038,7 +902,7 @@ public class TestWorkspaceDataProvider {
 			item.stackSize = 52;
 			item.enchantability = 3;
 			item.useDuration = 8;
-			item.toolType = 1.4;
+			item.toolType = 1.43;
 			item.damageCount = 4;
 			item.destroyAnyBlock = _true;
 			item.inventorySize = 10;
@@ -1049,7 +913,7 @@ public class TestWorkspaceDataProvider {
 			item.stayInGridWhenCrafting = _true;
 			item.damageOnCrafting = _true;
 			item.immuneToFire = _true;
-			item.hasGlow = _true;
+			item.glowCondition = new LogicProcedure(emptyLists ? "condition3" : null, _true);
 			item.onRightClickedInAir = new Procedure("procedure1");
 			item.onRightClickedOnBlock = emptyLists ? new Procedure("actionresulttype1") : new Procedure("procedure2");
 			item.onCrafted = new Procedure("procedure3");
@@ -1060,28 +924,57 @@ public class TestWorkspaceDataProvider {
 			item.onEntitySwing = new Procedure("procedure8");
 			item.onDroppedByPlayer = new Procedure("procedure9");
 			item.enableMeleeDamage = !_true;
-			item.damageVsEntity = 3;
-
-			if (!emptyLists) {
-				item.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				item.specialInfo = new ArrayList<>();
-			}
+			item.damageVsEntity = 6.53;
+			item.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			item.texture = "test2";
 			item.renderType = 0;
-			item.customModelName = "Normal";
+			item.customModelName = getRandomItem(random, ItemGUI.builtinitemmodels).getReadableName();
+
+			item.customProperties = new HashMap<>();
+			item.states = new ArrayList<>();
+			if (!emptyLists) {
+				int size1 = random.nextInt(3) + 1;
+				for (int i = 1; i <= size1; i++)
+					item.customProperties.put("property" + i, new Procedure("number" + i));
+
+				int size2 = random.nextInt(4) + 1;
+				for (int i = 0; i < size2; i++) {
+					StateMap stateMap = new StateMap();
+
+					for (int j = 2; j <= size1; j++) {
+						if (random.nextBoolean()) {
+							stateMap.put(new PropertyData.NumberType("CUSTOM:property" + j), random.nextDouble());
+						}
+					}
+
+					Item.StateEntry stateEntry = new Item.StateEntry();
+					stateEntry.setWorkspace(modElement.getWorkspace());
+					stateEntry.customModelName = getRandomItem(random, ItemGUI.builtinitemmodels).getReadableName();
+					stateEntry.texture = i == 0 ? "test" : "test" + i;
+					stateEntry.renderType = 0;
+					stateEntry.stateMap = stateMap;
+
+					item.states.add(stateEntry);
+				}
+			}
+
 			item.isFood = _true;
 			item.nutritionalValue = 5;
-			item.saturation = 0.8f;
+			item.saturation = 0.82;
 			item.isMeat = _true;
 			item.isAlwaysEdible = _true;
 			item.animation = getRandomItem(random,
 					new String[] { "block", "bow", "crossbow", "drink", "eat", "none", "spear" });
-			item.eatResultItem = new MItemBlock(modElement.getWorkspace(), emptyLists ?
-					"" :
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+			item.eatResultItem = new MItemBlock(modElement.getWorkspace(),
+					emptyLists ? "" : getRandomMCItem(random, blocksAndItems).getName());
 			item.onFinishUsingItem = new Procedure("procedure3");
+			item.enableRanged = _true;
+			item.projectile = new ProjectileEntry(modElement.getWorkspace(),
+					getRandomDataListEntry(random, ElementUtil.loadArrowProjectiles(modElement.getWorkspace())));
+			item.shootConstantly = emptyLists;
+			item.onRangedItemUsed = new Procedure("procedure4");
+			item.rangedUseCondition = new Procedure("condition1");
 			return item;
 		} else if (ModElementType.ITEMEXTENSION.equals(modElement.getType())) {
 			ItemExtension itemExtension = new ItemExtension(modElement);
@@ -1096,49 +989,24 @@ public class TestWorkspaceDataProvider {
 			itemExtension.dispenseSuccessCondition = _true ? new Procedure("condition1") : null;
 			itemExtension.dispenseResultItemstack = _true ? new Procedure("itemstack1") : null;
 			return itemExtension;
-		} else if (ModElementType.RANGEDITEM.equals(modElement.getType())) {
-			RangedItem rangedItem = new RangedItem(modElement);
-			rangedItem.name = modElement.getName();
-			rangedItem.creativeTab = new TabEntry(modElement.getWorkspace(),
-					getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
-			rangedItem.ammoItem = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, blocksAndItems).getName());
-			rangedItem.specialInfo = new ArrayList<>();
-			if (!emptyLists) {
-				rangedItem.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				rangedItem.specialInfo = new ArrayList<>();
-			}
-			rangedItem.animation = getRandomItem(random,
-					new String[] { "block", "bow", "crossbow", "drink", "eat", "none", "spear" });
-			rangedItem.shootConstantly = _true;
-			rangedItem.usageCount = 67;
-			rangedItem.stackSize = 41;
-			rangedItem.actionSound = new Sound(modElement.getWorkspace(),
+		} else if (ModElementType.PROJECTILE.equals(modElement.getType())) {
+			Projectile projectile = new Projectile(modElement);
+			projectile.actionSound = new Sound(modElement.getWorkspace(),
 					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			rangedItem.bulletPower = 1.5;
-			rangedItem.bulletDamage = 2.3;
-			rangedItem.bulletKnockback = 5;
-			rangedItem.bulletParticles = _true;
-			rangedItem.bulletIgnitesFire = _true;
-			rangedItem.bulletItemTexture = new MItemBlock(modElement.getWorkspace(),
+			projectile.power = 1.5;
+			projectile.damage = 2.3;
+			projectile.knockback = 7;
+			projectile.showParticles = _true;
+			projectile.igniteFire = _true;
+			projectile.projectileItem = new MItemBlock(modElement.getWorkspace(),
 					getRandomMCItem(random, blocksAndItems).getName());
-			rangedItem.onBulletHitsBlock = new Procedure("procedure2");
-			rangedItem.onBulletHitsPlayer = new Procedure("procedure1");
-			rangedItem.onBulletFlyingTick = new Procedure("procedure3");
-			rangedItem.onRangedItemUsed = new Procedure("procedure4");
-			rangedItem.useCondition = new Procedure("condition1");
-			rangedItem.onEntitySwing = new Procedure("procedure8");
-			rangedItem.bulletModel = "Default";
-			rangedItem.customBulletModelTexture = "";
-			rangedItem.texture = "test3";
-			rangedItem.renderType = 0;
-			rangedItem.customModelName = "Normal";
-			rangedItem.hasGlow = _true;
-			rangedItem.enableMeleeDamage = !_true;
-			rangedItem.damageVsEntity = 2;
-			return rangedItem;
+			projectile.entityModel = "Default";
+			projectile.customModelTexture = "";
+			projectile.onHitsBlock = new Procedure("procedure1");
+			projectile.onHitsEntity = new Procedure("procedure2");
+			projectile.onHitsPlayer = new Procedure("procedure3");
+			projectile.onFlyingTick = new Procedure("procedure4");
+			return projectile;
 		} else if (ModElementType.POTION.equals(modElement.getType())) {
 			Potion potion = new Potion(modElement);
 			potion.potionName = modElement.getName() + " Potion";
@@ -1171,7 +1039,7 @@ public class TestWorkspaceDataProvider {
 			PotionEffect potionEffect = new PotionEffect(modElement);
 			potionEffect.effectName = modElement.getName() + " Effect Name";
 			potionEffect.color = Color.magenta;
-			potionEffect.icon = "test.png";
+			potionEffect.icon = "effect1.png";
 			potionEffect.isInstant = !_true;
 			potionEffect.isBad = _true;
 			potionEffect.isBenefitical = !_true;
@@ -1296,23 +1164,26 @@ public class TestWorkspaceDataProvider {
 			block.fluidCapacity = 451;
 			block.fluidRestrictions = new ArrayList<>();
 			if (!emptyLists) {
-				block.fluidRestrictions.add(new net.mcreator.element.parts.Fluid(modElement.getWorkspace(),
-						getRandomItem(random, ElementUtil.loadAllFluids(modElement.getWorkspace()))));
-				block.fluidRestrictions.add(new net.mcreator.element.parts.Fluid(modElement.getWorkspace(),
-						getRandomItem(random, ElementUtil.loadAllFluids(modElement.getWorkspace()))));
+				block.fluidRestrictions.addAll(ElementUtil.loadAllFluids(modElement.getWorkspace()).stream()
+						.map(e -> new net.mcreator.element.parts.Fluid(modElement.getWorkspace(), e.getName()))
+						.toList());
 			}
-			block.spawnWorldTypes = new ArrayList<>(Arrays.asList("Nether", "Surface", "End"));
 			block.restrictionBiomes = new ArrayList<>();
 			if (!emptyLists) {
-				block.restrictionBiomes.addAll(
-						biomes.stream().skip(_true ? 0 : ((biomes.size() / 4) * valueIndex)).limit(biomes.size() / 4)
-								.map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				if (_true) {
+					block.restrictionBiomes.addAll(
+							biomes.stream().map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				} else {
+					block.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
+				}
 			}
 			block.blocksToReplace = new ArrayList<>();
 			if (!emptyLists) {
-				block.blocksToReplace.addAll(
-						blocks.stream().skip(_true ? 0 : ((blocks.size() / 4) * valueIndex)).limit(blocks.size() / 4)
+				block.blocksToReplace = new ArrayList<>(
+						blocksAndTags.stream().skip(_true ? 0 : ((blocksAndTags.size() / 4) * valueIndex))
+								.limit(blocksAndTags.size() / 4)
 								.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+				block.blocksToReplace.add(new MItemBlock(modElement.getWorkspace(), "TAG:flowers"));
 			}
 			block.generationShape = _true ? "UNIFORM" : "TRIANGLE";
 			block.frequencyPerChunks = 6;
@@ -1335,7 +1206,6 @@ public class TestWorkspaceDataProvider {
 				block.onRedstoneOff = new Procedure("procedure12");
 				block.onEntityWalksOn = new Procedure("procedure13");
 				block.onHitByProjectile = new Procedure("procedure14");
-				block.generateCondition = new Procedure("condition1");
 				block.placingCondition = new Procedure("condition2");
 				block.isBonemealTargetCondition = new Procedure("condition3");
 				block.bonemealSuccessCondition = new Procedure("condition4");
@@ -1349,13 +1219,8 @@ public class TestWorkspaceDataProvider {
 			block.textureFront = "test4";
 			block.textureRight = "test5";
 			block.textureBack = "test6";
-			block.specialInfo = new ArrayList<>();
-			if (!emptyLists) {
-				block.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				block.specialInfo = new ArrayList<>();
-			}
+			block.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 			block.tintType = getRandomString(random,
 					Arrays.asList("No tint", "Grass", "Foliage", "Birch foliage", "Spruce foliage", "Default foliage",
 							"Water", "Sky", "Fog", "Water fog"));
@@ -1368,13 +1233,15 @@ public class TestWorkspaceDataProvider {
 		} else if (ModElementType.TAG.equals(modElement.getType())) {
 			Tag tag = new Tag(modElement);
 			tag.namespace = getRandomItem(random, new String[] { "forge", "minecraft", "test1", "test2" });
-			tag.type = getRandomItem(random, new String[] { "Items", "Blocks", "Entities", "Functions", "Biomes" });
-			tag.name = modElement.getName();
+			tag.type = getRandomItem(random,
+					new String[] { "Items", "Blocks", "Entities", "Functions", "Biomes", "Damage types" });
+			tag.name = modElement.getName().toLowerCase(Locale.ENGLISH);
 			tag.items = new ArrayList<>();
 			tag.blocks = new ArrayList<>();
 			tag.functions = new ArrayList<>();
 			tag.entities = new ArrayList<>();
 			tag.biomes = new ArrayList<>();
+			tag.damageTypes = new ArrayList<>();
 			if (!emptyLists) {
 				tag.items.addAll(
 						blocksAndItems.stream().map(e -> new MItemBlock(modElement.getWorkspace(), e.getName()))
@@ -1385,6 +1252,12 @@ public class TestWorkspaceDataProvider {
 						.map(e -> new EntityEntry(modElement.getWorkspace(), e.getName())).toList());
 				tag.biomes.addAll(ElementUtil.loadAllBiomes(modElement.getWorkspace()).stream()
 						.map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				tag.biomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
+				tag.biomes.add(new BiomeEntry(modElement.getWorkspace(), "#forge:tag/test"));
+				tag.damageTypes.addAll(
+						ElementUtil.loadDataListAndElements(modElement.getWorkspace(), "damagesources", false, null,
+										"damagetype").stream()
+								.map(e -> new DamageTypeEntry(modElement.getWorkspace(), e.getName())).toList());
 
 				tag.functions.add("ExampleFunction1");
 				tag.functions.add("ExampleFunction2");
@@ -1430,7 +1303,7 @@ public class TestWorkspaceDataProvider {
 						entry.maxEnchantmentLevel = new int[] { 3, 9, 5, 6 }[valueIndex];
 
 						entry.item = new MItemBlock(modElement.getWorkspace(),
-								getRandomMCItem(random, blocksAndItems).getName());
+								getRandomMCItem(random, filterAir(blocksAndItems)).getName());
 
 						pool.entries.add(entry);
 					}
@@ -1449,10 +1322,11 @@ public class TestWorkspaceDataProvider {
 		} else if (ModElementType.MUSICDISC.equals(modElement.getType())) {
 			MusicDisc musicDisc = new MusicDisc(modElement);
 			musicDisc.name = modElement.getName();
+			musicDisc.rarity = getRandomString(random, Arrays.asList("COMMON", "UNCOMMON", "RARE", "EPIC"));
 			musicDisc.description = modElement.getName();
 			musicDisc.creativeTab = new TabEntry(modElement.getWorkspace(),
 					getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
-			musicDisc.hasGlow = _true;
+			musicDisc.glowCondition = new LogicProcedure(emptyLists ? "condition1" : null, _true);
 			musicDisc.onRightClickedInAir = new Procedure("procedure1");
 			musicDisc.onRightClickedOnBlock = emptyLists ?
 					new Procedure("actionresulttype1") :
@@ -1461,19 +1335,14 @@ public class TestWorkspaceDataProvider {
 			musicDisc.onEntityHitWith = new Procedure("procedure4");
 			musicDisc.onItemInInventoryTick = new Procedure("procedure5");
 			musicDisc.onItemInUseTick = new Procedure("procedure6");
-			musicDisc.onStoppedUsing = new Procedure("procedure7");
 			musicDisc.onEntitySwing = new Procedure("procedure8");
 			musicDisc.lengthInTicks = 13;
 			musicDisc.analogOutput = 6;
 			musicDisc.music = new Sound(modElement.getWorkspace(),
 					getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
-			if (!emptyLists) {
-				musicDisc.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-						"info 1, info 2, test \\, is this, another one");
-			} else {
-				musicDisc.specialInfo = new ArrayList<>();
-			}
-			musicDisc.texture = "itest";
+			musicDisc.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+					Arrays.asList("info 1", "info 2", "test, is this", "another one"));
+			musicDisc.texture = "test";
 			return musicDisc;
 		} else if (ModElementType.ENCHANTMENT.equals(modElement.getType())) {
 			Enchantment enchantment = new Enchantment(modElement);
@@ -1491,10 +1360,11 @@ public class TestWorkspaceDataProvider {
 			enchantment.canVillagerTrade = _true;
 			enchantment.compatibleItems = new ArrayList<>();
 			if (!emptyLists) {
-				enchantment.compatibleItems.addAll(
-						blocksAndItems.stream().skip(_true ? 0 : ((long) (blocksAndItems.size() / 4) * valueIndex))
-								.limit(blocksAndItems.size() / 4)
-								.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+				enchantment.compatibleItems = new ArrayList<>(blocksAndItemsAndTags.stream()
+						.skip(_true ? 0 : ((long) (blocksAndItemsAndTags.size() / 4) * valueIndex))
+						.limit(blocksAndItemsAndTags.size() / 4)
+						.map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+				enchantment.compatibleItems.add(new MItemBlock(modElement.getWorkspace(), "TAG:flowers"));
 				enchantment.excludeEnchantments = _true;
 			}
 			enchantment.compatibleEnchantments = new ArrayList<>();
@@ -1516,7 +1386,7 @@ public class TestWorkspaceDataProvider {
 			return painting;
 		} else if (ModElementType.PARTICLE.equals(modElement.getType())) {
 			net.mcreator.element.types.Particle particle = new net.mcreator.element.types.Particle(modElement);
-			particle.texture = "test.png";
+			particle.texture = "particle1.png";
 			particle.width = 2.3;
 			particle.frameDuration = 2;
 			particle.height = 1.38;
@@ -1575,14 +1445,12 @@ public class TestWorkspaceDataProvider {
 					int entries = random.nextInt(10) + 1;
 					for (int j = 0; j < entries; j++) {
 						VillagerTrade.CustomTradeEntry.Entry entry = new VillagerTrade.CustomTradeEntry.Entry();
-						entry.price1 = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-								ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-						entry.price2 = new MItemBlock(modElement.getWorkspace(), _true ?
-								getRandomMCItem(random,
-										ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName() :
-								"");
-						entry.offer = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-								ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+						entry.price1 = new MItemBlock(modElement.getWorkspace(),
+								getRandomMCItem(random, filterAir(blocksAndItems)).getName());
+						entry.price2 = new MItemBlock(modElement.getWorkspace(),
+								_true ? getRandomMCItem(random, blocksAndItems).getName() : "");
+						entry.offer = new MItemBlock(modElement.getWorkspace(),
+								getRandomMCItem(random, filterAir(blocksAndItems)).getName());
 						entry.countPrice1 = new int[] { 3, 57, 34, 28 }[valueIndex];
 						entry.countPrice2 = new int[] { 9, 61, 17, 45 }[valueIndex];
 						entry.countOffer = new int[] { 8, 13, 23, 60 }[valueIndex];
@@ -1601,14 +1469,12 @@ public class TestWorkspaceDataProvider {
 					int wanderingEntries = random.nextInt(10) + 1;
 					for (int j = 0; j < wanderingEntries; j++) {
 						VillagerTrade.CustomTradeEntry.Entry entry = new VillagerTrade.CustomTradeEntry.Entry();
-						entry.price1 = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-								ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-						entry.price2 = new MItemBlock(modElement.getWorkspace(), _true ?
-								getRandomMCItem(random,
-										ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName() :
-								"");
-						entry.offer = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-								ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+						entry.price1 = new MItemBlock(modElement.getWorkspace(),
+								getRandomMCItem(random, filterAir(blocksAndItems)).getName());
+						entry.price2 = new MItemBlock(modElement.getWorkspace(),
+								_true ? getRandomMCItem(random, blocksAndItems).getName() : "");
+						entry.offer = new MItemBlock(modElement.getWorkspace(),
+								getRandomMCItem(random, filterAir(blocksAndItems)).getName());
 						entry.countPrice1 = new int[] { 3, 57, 34, 28 }[valueIndex];
 						entry.countPrice2 = new int[] { 9, 61, 17, 45 }[valueIndex];
 						entry.countOffer = new int[] { 8, 13, 23, 60 }[valueIndex];
@@ -1628,12 +1494,17 @@ public class TestWorkspaceDataProvider {
 			net.mcreator.element.types.Procedure procedure = new net.mcreator.element.types.Procedure(modElement);
 			procedure.procedurexml = net.mcreator.element.types.Procedure.XML_BASE;
 			return procedure;
-		} else if (ModElementType.COMMAND.equals(modElement.getType())) {
-			Command command = new Command(modElement);
-			command.commandName = modElement.getName();
-			command.permissionLevel = getRandomString(random, List.of("No requirement", "1", "2", "3", "4"));
-			command.argsxml = Command.XML_BASE;
-			return command;
+		} else if (ModElementType.DAMAGETYPE.equals(modElement.getType())) {
+			DamageType damageType = new DamageType(modElement);
+			damageType.exhaustion = 0.37;
+			damageType.scaling = getRandomString(random,
+					Arrays.asList("never", "always", "when_caused_by_living_non_player"));
+			damageType.effects = getRandomString(random,
+					Arrays.asList("hurt", "thorns", "drowning", "burning", "poking", "freezing"));
+			damageType.normalDeathMessage = "%1$s was slain";
+			damageType.itemDeathMessage = "%1$s was slain by %2$s using %3$s";
+			damageType.playerDeathMessage = "%1$s was slain whilst escaping %2$s";
+			return damageType;
 		}
 		// As feature requires placement and feature to place, this GE is only returned for uiTests
 		// For generator tests, it will be tested by GTFeatureBlocks anyway
@@ -1641,21 +1512,198 @@ public class TestWorkspaceDataProvider {
 			Feature feature = new Feature(modElement);
 			feature.generationStep = TestWorkspaceDataProvider.getRandomItem(random,
 					ElementUtil.getDataListAsStringArray("generationsteps"));
-			feature.restrictionDimensions = emptyLists ?
-					new ArrayList<>() :
-					new ArrayList<>(Arrays.asList("Surface", "Nether"));
 			feature.restrictionBiomes = new ArrayList<>();
 			if (!emptyLists) {
 				feature.restrictionBiomes.addAll(
 						biomes.stream().skip(_true ? 0 : ((long) (biomes.size() / 4) * valueIndex))
 								.limit(biomes.size() / 4)
 								.map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+				feature.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
+				feature.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#forge:tag/test"));
 			}
 			feature.generateCondition = _true ? new Procedure("condition1") : null;
 			feature.featurexml = Feature.XML_BASE;
 			return feature;
 		}
 		return null;
+	}
+
+	private static GeneratableElement getCommandExample(ModElement modElement, String type, Random random) {
+		Command command = new Command(modElement);
+		command.commandName = modElement.getName();
+		command.type = type;
+		command.permissionLevel = getRandomString(random, List.of("No requirement", "1", "2", "3", "4"));
+		command.argsxml = Command.XML_BASE;
+		return command;
+	}
+
+	public static LivingEntity getLivingEntity(ModElement modElement, Random random, boolean _true, boolean emptyLists,
+			List<MCItem> blocksAndItems, List<MCItem> blocksAndItemsAndTags, List<DataListEntry> biomes) {
+		LivingEntity livingEntity = new LivingEntity(modElement);
+		livingEntity.mobName = modElement.getName();
+		livingEntity.mobLabel = "mod label " + StringUtils.machineToReadableName(modElement.getName());
+		livingEntity.mobModelTexture = "entityTx1.png";
+		livingEntity.transparentModelCondition = new LogicProcedure(emptyLists ? "condition1" : null, _true);
+		livingEntity.isShakingCondition = new LogicProcedure(emptyLists ? "condition2" : null, !_true);
+		livingEntity.solidBoundingBox = new LogicProcedure(emptyLists ? "condition3" : null, _true);
+		livingEntity.visualScale = new NumberProcedure(emptyLists ? null : "number1", 8.123);
+		livingEntity.boundingBoxScale = new NumberProcedure(emptyLists ? null : "number2", 4.223);
+		livingEntity.mobModelName = getRandomItem(random, LivingEntityGUI.builtinmobmodels).getReadableName();
+		livingEntity.spawnEggBaseColor = Color.red;
+		livingEntity.spawnEggDotColor = Color.green;
+		livingEntity.isBoss = _true;
+		livingEntity.creativeTab = new TabEntry(modElement.getWorkspace(),
+				getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
+		livingEntity.bossBarColor = getRandomItem(random,
+				new String[] { "PINK", "BLUE", "RED", "GREEN", "YELLOW", "PURPLE", "WHITE" });
+		livingEntity.bossBarType = getRandomItem(random,
+				new String[] { "PROGRESS", "NOTCHED_6", "NOTCHED_10", "NOTCHED_12", "NOTCHED_20" });
+		livingEntity.equipmentMainHand = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.equipmentOffHand = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.equipmentHelmet = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.equipmentBody = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.equipmentLeggings = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.equipmentBoots = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.mobBehaviourType = _true ? "Creature" : "Mob";
+		livingEntity.mobCreatureType = getRandomItem(random,
+				new String[] { "UNDEFINED", "UNDEAD", "ARTHROPOD", "ILLAGER", "WATER" });
+		livingEntity.attackStrength = 4;
+		livingEntity.attackKnockback = 1.5;
+		livingEntity.knockbackResistance = 0.5;
+		livingEntity.movementSpeed = 0.76;
+		livingEntity.stepHeight = 2.24;
+		livingEntity.armorBaseValue = 0.123;
+		livingEntity.health = 42;
+		livingEntity.trackingRange = 27;
+		livingEntity.followRange = 11;
+		livingEntity.waterMob = !_true;
+		livingEntity.breatheUnderwater = new LogicProcedure(emptyLists ? null : "condition3", _true);
+		livingEntity.pushedByFluids = new LogicProcedure(emptyLists ? null : "condition4", _true);
+		livingEntity.flyingMob = !_true;
+		livingEntity.inventorySize = 10;
+		livingEntity.inventoryStackSize = 42;
+		livingEntity.disableCollisions = !_true;
+		livingEntity.immuneToFire = _true;
+		livingEntity.immuneToArrows = !_true;
+		livingEntity.immuneToFallDamage = !_true;
+		livingEntity.immuneToCactus = !_true;
+		livingEntity.immuneToDrowning = !_true;
+		livingEntity.immuneToLightning = !_true;
+		livingEntity.immuneToPotions = !_true;
+		livingEntity.immuneToPlayer = !_true;
+		livingEntity.immuneToExplosion = !_true;
+		livingEntity.immuneToTrident = !_true;
+		livingEntity.immuneToAnvil = !_true;
+		livingEntity.immuneToDragonBreath = !_true;
+		livingEntity.immuneToWither = !_true;
+		livingEntity.hasSpawnEgg = !_true;
+		livingEntity.xpAmount = 8;
+		livingEntity.ridable = _true;
+		livingEntity.canControlStrafe = !_true;
+		livingEntity.canControlForward = _true;
+		livingEntity.guiBoundTo = "<NONE>";
+		livingEntity.mobDrop = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.livingSound = new Sound(modElement.getWorkspace(),
+				getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
+		livingEntity.hurtSound = new Sound(modElement.getWorkspace(),
+				getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
+		livingEntity.deathSound = new Sound(modElement.getWorkspace(),
+				getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
+		livingEntity.stepSound = new Sound(modElement.getWorkspace(),
+				emptyLists ? "" : getRandomItem(random, ElementUtil.getAllSounds(modElement.getWorkspace())));
+		livingEntity.rangedItemType = "Default item";
+		if (!emptyLists) {
+			livingEntity.spawningCondition = new Procedure("condition3");
+			livingEntity.onStruckByLightning = new Procedure("procedure1");
+			livingEntity.whenMobFalls = new Procedure("procedure2");
+			livingEntity.whenMobDies = new Procedure("procedure3");
+			livingEntity.whenMobIsHurt = new Procedure("procedure4");
+			livingEntity.onRightClickedOn = _true ? new Procedure("actionresulttype1") : new Procedure("procedure5");
+			livingEntity.whenThisMobKillsAnother = new Procedure("procedure6");
+			livingEntity.onMobTickUpdate = new Procedure("procedure7");
+			livingEntity.onPlayerCollidesWith = new Procedure("procedure8");
+			livingEntity.onInitialSpawn = new Procedure("procedure9");
+		}
+		livingEntity.hasAI = _true;
+		livingEntity.aiBase = "(none)";
+		livingEntity.aixml = "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"aitasks_container\" deletable=\"false\" x=\"40\" y=\"40\"></block></xml>";
+		livingEntity.breedable = _true;
+		livingEntity.tameable = _true;
+		livingEntity.breedTriggerItems = new ArrayList<>();
+		if (!emptyLists) {
+			livingEntity.breedTriggerItems.add(new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTags).getName()));
+			livingEntity.breedTriggerItems.add(new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTags).getName()));
+			livingEntity.breedTriggerItems.add(new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTags).getName()));
+			livingEntity.breedTriggerItems.add(new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTags).getName()));
+			livingEntity.breedTriggerItems.add(new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTags).getName()));
+		}
+		livingEntity.ranged = _true;
+		livingEntity.rangedAttackItem = new MItemBlock(modElement.getWorkspace(),
+				getRandomMCItem(random, blocksAndItems).getName());
+		livingEntity.rangedAttackInterval = 15;
+		livingEntity.rangedAttackRadius = 8.75;
+		livingEntity.spawnThisMob = !_true;
+		livingEntity.doesDespawnWhenIdle = _true;
+		livingEntity.spawningProbability = 23;
+		livingEntity.mobSpawningType = getRandomItem(random, ElementUtil.getDataListAsStringArray("mobspawntypes"));
+		livingEntity.minNumberOfMobsPerGroup = 4;
+		livingEntity.maxNumberOfMobsPerGroup = 40;
+		livingEntity.restrictionBiomes = new ArrayList<>();
+		if (!emptyLists) {
+			if (_true) {
+				livingEntity.restrictionBiomes.addAll(
+						biomes.stream().map(e -> new BiomeEntry(modElement.getWorkspace(), e.getName())).toList());
+			} else {
+				livingEntity.restrictionBiomes.add(new BiomeEntry(modElement.getWorkspace(), "#is_overworld"));
+			}
+		}
+		livingEntity.spawnInDungeons = _true;
+		livingEntity.modelWidth = 0.4;
+		livingEntity.modelHeight = 1.3;
+		livingEntity.mountedYOffset = -3.1;
+		livingEntity.modelShadowSize = 1.8;
+		livingEntity.modelLayers = new ArrayList<>();
+		if (!emptyLists) {
+			livingEntity.entityDataEntries.add(new PropertyDataWithValue<>(new PropertyData.LogicType("Logic"), _true));
+			livingEntity.entityDataEntries.add(
+					new PropertyDataWithValue<>(new PropertyData.IntegerType("Integer"), random.nextInt()));
+			livingEntity.entityDataEntries.add(new PropertyDataWithValue<>(new PropertyData.StringType("String"),
+					getRandomItem(random, new String[] { "value1", "value2", "value3" })));
+			LivingEntity.ModelLayerEntry modelLayer = new LivingEntity.ModelLayerEntry();
+			modelLayer.setWorkspace(modElement.getWorkspace());
+			modelLayer.model = "Default";
+			modelLayer.texture = "entityTx2.png";
+			modelLayer.glow = true;
+			modelLayer.condition = null;
+			livingEntity.modelLayers.add(modelLayer);
+			modelLayer = new LivingEntity.ModelLayerEntry();
+			modelLayer.setWorkspace(modElement.getWorkspace());
+			modelLayer.model = "Default";
+			modelLayer.texture = "test.png";
+			modelLayer.glow = false;
+			modelLayer.condition = new Procedure("condition1");
+			livingEntity.modelLayers.add(modelLayer);
+			modelLayer = new LivingEntity.ModelLayerEntry();
+			modelLayer.setWorkspace(modElement.getWorkspace());
+			modelLayer.model = "Default";
+			modelLayer.texture = "entityTx2.png";
+			modelLayer.glow = true;
+			modelLayer.condition = null;
+			livingEntity.modelLayers.add(modelLayer);
+		}
+		return livingEntity;
 	}
 
 	private static GeneratableElement getToolExample(ModElement modElement, String toolType, Random random,
@@ -1666,81 +1714,33 @@ public class TestWorkspaceDataProvider {
 				getRandomDataListEntry(random, ElementUtil.loadAllTabs(modElement.getWorkspace())));
 		tool.toolType = toolType;
 		tool.harvestLevel = 3;
-		tool.efficiency = 6;
+		tool.efficiency = 6.5;
 		tool.attackSpeed = 4.8;
 		tool.enchantability = 4;
-		tool.damageVsEntity = 2;
+		tool.damageVsEntity = 2.45;
 		tool.usageCount = 24;
 		tool.stayInGridWhenCrafting = _true;
 		tool.damageOnCrafting = emptyLists;
 		tool.immuneToFire = _true;
 		tool.blocksAffected = new ArrayList<>();
-		tool.hasGlow = _true;
-		tool.specialInfo = new ArrayList<>();
+		tool.glowCondition = new LogicProcedure(emptyLists ? "condition2" : null, _true);
+		tool.specialInformation = new StringListProcedure(emptyLists ? null : "string1",
+				Arrays.asList("info 1", "info 2", "test, is this", "another one"));
 		if (!emptyLists) {
-			tool.specialInfo = StringUtils.splitCommaSeparatedStringListWithEscapes(
-					"info 1, info 2, test \\, is this, another one");
-		} else {
-			tool.specialInfo = new ArrayList<>();
-		}
-		if (!emptyLists) {
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
-			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocks(modElement.getWorkspace())).getName()));
+			List<MCItem> blocksAndTags = ElementUtil.loadBlocksAndTags(modElement.getWorkspace());
+			tool.blocksAffected.addAll(
+					blocksAndTags.stream().map(e -> new MItemBlock(modElement.getWorkspace(), e.getName())).toList());
+			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(), "TAG:flowers"));
+			tool.blocksAffected.add(new MItemBlock(modElement.getWorkspace(), "TAG:minecraft/test/path"));
 		}
 		tool.repairItems = new ArrayList<>();
 		if (!emptyLists) {
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
-			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName()));
+			List<MCItem> blocksAndItemsAndTags = ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace());
+			tool.repairItems.addAll(
+					blocksAndItemsAndTags.stream().map(e -> new MItemBlock(modElement.getWorkspace(), e.getName()))
+							.toList());
+			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(), "TAG:flowers"));
+			tool.repairItems.add(new MItemBlock(modElement.getWorkspace(), "TAG:minecraft/test/path"));
 		}
 		tool.onRightClickedInAir = new Procedure("procedure1");
 		tool.onRightClickedOnBlock = emptyLists ? new Procedure("actionresulttype1") : new Procedure("procedure2");
@@ -1749,11 +1749,12 @@ public class TestWorkspaceDataProvider {
 		tool.onEntityHitWith = new Procedure("procedure5");
 		tool.onItemInInventoryTick = new Procedure("procedure6");
 		tool.onItemInUseTick = new Procedure("procedure7");
-		tool.onStoppedUsing = new Procedure("procedure8");
 		tool.onEntitySwing = new Procedure("procedure11");
 		tool.texture = "test";
 		tool.renderType = 0;
 		tool.customModelName = "Normal";
+		tool.blockingRenderType = 0;
+		tool.blockingModelName = "Normal blocking";
 		return tool;
 	}
 
@@ -1765,93 +1766,105 @@ public class TestWorkspaceDataProvider {
 		recipe.craftingBookCategory = getRandomItem(random,
 				new String[] { "MISC", "BUILDING", "REDSTONE", "EQUIPMENT" });
 		recipe.recipeType = recipeType;
-		if ("Crafting".equals(recipe.recipeType)) {
+
+		List<MCItem> blocksAndItemsAndTagsNoAir = filterAir(
+				ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace()));
+		List<MCItem> blocksAndItemsNoAir = filterAir(ElementUtil.loadBlocksAndItems(modElement.getWorkspace()));
+
+		switch (recipe.recipeType) {
+		case "Crafting" -> {
 			MItemBlock[] recipeSlots = new MItemBlock[9];
-
 			Arrays.fill(recipeSlots, new MItemBlock(modElement.getWorkspace(), ""));
-
-			recipeSlots[0] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
-
+			recipeSlots[0] = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[3] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[3] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[6] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[6] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[1] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[1] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[4] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[4] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[7] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[7] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[2] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[2] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[5] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[5] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			if (random.nextBoolean())
-				recipeSlots[8] = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-						ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+				recipeSlots[8] = new MItemBlock(modElement.getWorkspace(),
+						getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.recipeRetstackSize = 11;
 			recipe.recipeShapeless = _true;
 			recipe.recipeReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
 			recipe.recipeSlots = recipeSlots;
-		} else if ("Smelting".equals(recipe.recipeType)) {
-			recipe.smeltingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Smelting" -> {
+			recipe.smeltingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.smeltingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
 			recipe.xpReward = 1.234;
 			recipe.cookingTime = 123;
-		} else if ("Smoking".equals(recipe.recipeType)) {
-			recipe.smokingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Smoking" -> {
+			recipe.smokingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.smokingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-			recipe.xpReward = 12.34;
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
+			recipe.xpReward = 1.34;
 			recipe.cookingTime = 42;
-		} else if ("Blasting".equals(recipe.recipeType)) {
-			recipe.blastingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Blasting" -> {
+			recipe.blastingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.blastingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-			recipe.xpReward = 21.234;
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
+			recipe.xpReward = 6.45;
 			recipe.cookingTime = 1000;
-		} else if ("Stone cutting".equals(recipe.recipeType)) {
-			recipe.stoneCuttingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Stone cutting" -> {
+			recipe.stoneCuttingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.stoneCuttingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
 			recipe.recipeRetstackSize = 32;
-		} else if ("Campfire cooking".equals(recipe.recipeType)) {
-			recipe.campfireCookingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Campfire cooking" -> {
+			recipe.campfireCookingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
 			recipe.campfireCookingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-			recipe.xpReward = 21.234;
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
+			recipe.xpReward = 24.234;
 			recipe.cookingTime = 2983;
-		} else if ("Smithing".equals(recipe.recipeType)) {
-			recipe.smithingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
-			recipe.smithingInputAdditionStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
+		}
+		case "Smithing" -> {
+			recipe.smithingInputStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
+			recipe.smithingInputAdditionStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
+			recipe.smithingInputTemplateStack = new MItemBlock(modElement.getWorkspace(),
+					_true ? getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName() : "");
 			recipe.smithingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-		} else if ("Brewing".equals(recipe.recipeType)) {
+					getRandomMCItem(random, blocksAndItemsNoAir).getName());
+		}
+		case "Brewing" -> {
 			recipe.brewingInputStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
-			recipe.brewingIngredientStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
-					ElementUtil.loadBlocksAndItemsAndTags(modElement.getWorkspace())).getName());
-			recipe.brewingReturnStack = new MItemBlock(modElement.getWorkspace(),
-					getRandomMCItem(random, ElementUtil.loadBlocksAndItems(modElement.getWorkspace())).getName());
-		} else {
-			throw new RuntimeException("Unknown recipe type");
+					filterAir(ElementUtil.loadBlocksAndItemsAndTagsAndPotions(modElement.getWorkspace()))).getName());
+			recipe.brewingIngredientStack = new MItemBlock(modElement.getWorkspace(),
+					getRandomMCItem(random, blocksAndItemsAndTagsNoAir).getName());
+			recipe.brewingReturnStack = new MItemBlock(modElement.getWorkspace(), getRandomMCItem(random,
+					filterAir(ElementUtil.loadBlocksAndItemsAndPotions(modElement.getWorkspace()))).getName());
+		}
+		default -> throw new RuntimeException("Unknown recipe type");
 		}
 		return recipe;
 	}
@@ -1887,6 +1900,12 @@ public class TestWorkspaceDataProvider {
 		int listSize = list.size();
 		int randomIndex = random.nextInt(listSize);
 		return list.get(randomIndex);
+	}
+
+	private static List<MCItem> filterAir(List<MCItem> source) {
+		return source.stream()
+				.filter(e -> !(e.getName().equals("Blocks.AIR") || e.getName().equals("Blocks.VOID_AIR") || e.getName()
+						.equals("Blocks.CAVE_AIR"))).toList();
 	}
 
 }
